# prometheus-client-c

./: .gitignore  .travis.yml  CMakeLists.txt  CODEOWNERS  Doxyfile  LICENSE  Makefile  README.md  appveyor.yml  auto
.github/workflows/: ci.yaml
autolib/: autolib.sh  build.sh  docker.sh  env.sh  output.sh  test.sh
autolib/cmd/: build  clean  dev  docs  format  package  smoke  test
docker/: Dockerfile  Makefile
docs/: annotated.html  classes.html  dir_000003_000000.html  dir_21619567660c3332e6a61228c76007f9.html  dir_21619567660c3332e6a61228c76007f9_dep.dot  dir_21619567660c3332e6a61228c76007f9_dep.map  dir_21619567660c3332e6a61228c76007f9_dep.md5  dir_2c63f04010e7ff462eba5e344f58cd21.html  dir_83821d63a26a6eb889c4977bd95ca990.html  dir_8d140c3a8bac3cd45205c9ea74fd211f.html  dir_8d140c3a8bac3cd45205c9ea74fd211f_dep.dot  dir_8d140c3a8bac3cd45205c9ea74fd211f_dep.map  dir_8d140c3a8bac3cd45205c9ea74fd211f_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  menudata.js  pages.html  prom_8h.html  prom_8h__dep__incl.dot  prom_8h__dep__incl.map  prom_8h__dep__incl.md5  prom_8h__incl.dot  prom_8h__incl.map  prom_8h__incl.md5  prom_8h_source.html  prom__alloc_8h.html  prom__alloc_8h__dep__incl.map  prom__alloc_8h__dep__incl.md5  prom__alloc_8h__incl.map  prom__alloc_8h__incl.md5  (+87 more)
docs/search/: all_1.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  pages_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
example/: Makefile  README.md  bar.c  bar.h  example  foo.c  foo.h  main.c
prom/: CMakeLists.txt  libprom.pc.in
prom/include/: prom.h  prom_alloc.h  prom_collector.h  prom_collector_registry.h  prom_counter.h  prom_gauge.h  prom_histogram.h  prom_histogram_buckets.h  prom_linked_list.h  prom_map.h  prom_metric.h  prom_metric_sample.h  prom_metric_sample_histogram.h
prom/src/: prom_assert.h  prom_collector.c  prom_collector_registry.c  prom_collector_registry_i.h  prom_collector_registry_t.h  prom_collector_t.h  prom_counter.c  prom_errors.h  prom_gauge.c  prom_histogram.c  prom_histogram_buckets.c  prom_linked_list.c  prom_linked_list_i.h  prom_linked_list_t.h  prom_log.h  prom_map.c  prom_map_i.h  prom_map_t.h  prom_metric.c  prom_metric_formatter.c  prom_metric_formatter_i.h  prom_metric_formatter_t.h  prom_metric_i.h  prom_metric_sample.c  prom_metric_sample_histogram.c  prom_metric_sample_histogram_i.h  prom_metric_sample_histogram_t.h  prom_metric_sample_i.h  prom_metric_sample_t.h  prom_metric_t.h  prom_process_fds.c  prom_process_fds_i.h  prom_process_fds_t.h  prom_process_limits.c  prom_process_limits_i.h  prom_process_limits_t.h  prom_process_stat.c  prom_process_stat_i.h  prom_process_stat_t.h  prom_procfs.c  (+5 more)
prom/test/: CMakeLists.txt  prom_collector_registry_test.c  prom_collector_test.c  prom_counter_test.c  prom_gauge_test.c  prom_histogram_buckets_test.c  prom_histogram_test.c  prom_linked_list_test.c  prom_map_test.c  prom_metric_formatter_test.c  prom_metric_sample_test.c  prom_metric_test.c  prom_process_limits_test.c  prom_procfs_test.c  prom_string_builder_test.c  prom_test_helpers.c  prom_test_helpers.h
prom/test/fixtures/: limits  stat
promhttp/: CMakeLists.txt
promhttp/include/: promhttp.h
promhttp/src/: promhttp.c
promtest/: CMakeLists.txt
promtest/test/: promtest.c  promtest_counter.c  promtest_counter.h  promtest_gauge.c  promtest_gauge.h  promtest_helpers.c  promtest_helpers.h  promtest_histogram.c  promtest_histogram.h
